--- a/styles/style.css
+++ b/styles/style.css
@@ -48,3 +48,25 @@ img{
     height: auto;
 }
 
+.box{
+    margin: 1rem;
+    border: 1px solid rgba(0,0,0,1);
+    padding: 1rem;
+    background-color: #ddd;
+    color: #000;
+}
+
+aside{
+    width: 20em;
+    text-align: center;
+}
+
+main img {
+    float: right
+}
+aside h2{
+    position: absolute;
+    top: 47px;
+    left: 150px;
+}
+
