--- a/wdd130/styles/style.css
+++ b/wdd130/styles/style.css
@@ -10,22 +10,33 @@ nav a {
 }
 
 h1 {
-    width: 200px;
-    height: auto;
-    border: 1px solid steelblue;
-    padding: 2px;
-    box-shadow: 0 0 30px gray;
+    display:block;
+    color: steelblue;
+    align-content: center;
+    max-width: 849px;;
+
 }
 
-p {padding: 0;}
+/* div main h1 {
+    width: 1fr;
+    height: auto;
+    border-bottom: 2px, steelblue;
+    padding: 2px;
+   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+   color: steelblue;
+}*/
+
+p {padding: 0;
+text-align: left;}
 
 main {
     max-width: 840px;
 }
 
 aside img {
-    width:200 px;
+    width:1fr;
     height: auto;
+
 }
 
 main img {
@@ -41,6 +52,8 @@ aside {
     color:#333;
     text-align: center;
     margin: 1rem;
+    text-align: justify;
+    
 }
 
 img{
@@ -69,3 +82,48 @@ aside h2{
     top: 47px;
     left: 150px;
 }
+header, .grid, footer {
+    max-width: 840px;
+    margin: 0 auto;
+}
+
+nav {
+    display: flex;
+    background-color: steelblue;
+    padding: 1rem;
+    justify-content: space-evenly;
+    align-items: center;
+
+}
+
+nav a {
+    display: block;
+    padding: 0.5 rem;
+    text-decoration: none;
+    font-size: 1.2rem;
+    font-weight: 700;
+    color: #fff; 
+}
+
+.grid{
+    display: grid;
+    align-items: center;
+
+}
+
+main{
+    grid-column: 2/3;
+    margin: 1rem;
+}
+
+aside {
+    width: 20rem;
+    position: relative;
+    grid-column: 1/2;
+    grid-row: 1/2;
+}
+
+footer p {
+    text-align: center;
+}
+
