--- a/styles/style.css
+++ b/styles/style.css
@@ -83,6 +83,7 @@ aside h2{
     position: absolute;
     top: 47px;
     left: 150px;
+    text-align: center;
 }
 header, .grid, footer {
     max-width: 840px;
