--- a/wwr/site-plan-rafting.css
+++ b/wwr/site-plan-rafting.css
@@ -25,11 +25,16 @@ h1, h2, h3, h4, h5, h6 {
     color:var(--primary-color);
 }
 
-header{
+header {
 
     padding: 20px;
-    background-color:var(--accent1-color);
-
+    /*background-color:var(--accent1-color);*/
+    margin: 1rem auto;
+	display: grid;
+	grid-template-columns: 120px, 2fr;
+	align-items: center;
+	border-bottom: 1px solid #ccc;
+	max-width: 1000px;
 }
 
 p{
@@ -40,6 +45,7 @@ nav{
     background-color: var(--nav-background-color);
     font-size: 1.2rem;
     display: flex;
+    text-align: right;
 }
 
 nav a {
@@ -57,6 +63,8 @@ nav a:link, nva a:visited {
 nav a:hover {
     color:var(--nav-hover-link-color);
     background-color:var(--nav-hover-background-color);
+    display: flex;
+
 
 }
 .box{
@@ -79,4 +87,37 @@ aside h2{
     position: absolute;
     top: 47px;
     left: 150px;
+}
+
+.img {
+	margin: 0 0.25rem 0 1rem;
+	width: 64px;
+	height: auto;
+}
+
+h1 {
+	font-size: 2rem;
+	font-family: Acme, Arial, sans-serif;
+}
+
+.navigation {
+	display: flex;
+	list-style: none;
+}
+
+.navigation li {
+	flex: 1 1 100%;
+}
+
+.navigation a {
+	display: block;
+	color: navy;
+	padding: 20px;
+	text-decoration: none;
+}
+
+.navigation a:hover {
+	color: tomato;
+	font-weight: 700;
+	text-decoration: underline;
 }
