--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -220,5 +220,6 @@ footer nav a img{
     background-color:rgb(197, 103, 165);
     padding: 30px;
     max-width: fit-content;
+    color: white;
 
 }
