--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -210,6 +210,12 @@ footer nav a img{
    align-items:flex-start;   
   
 }
+.hero h1{
+    justify-content: center;
+    justify-self: center;
+    justify-items: center;
+    text-align: center;
+}
 
 .hero article {
     max-width: 800px;
