--- a/wdd130/styles/style.css
+++ b/wdd130/styles/style.css
@@ -13,7 +13,9 @@ h1 {
     display:block;
     color: steelblue;
     align-content: center;
-    max-width: 849px;;
+    max-width: 849px;
+    border-bottom: 1px solid rgb(38, 69, 178);
+    position:relative;
 
 }
 
@@ -34,13 +36,13 @@ main {
 }
 
 aside img {
-    width:1fr;
+    width:20rem;
     height: auto;
 
 }
 
 main img {
-    width:150 px;
+    width:150px;
     height: auto;
 }
 
@@ -57,7 +59,7 @@ aside {
 }
 
 img{
-    width: 200;
+    width: 200px;
     height: auto;
 }
 
@@ -79,8 +81,10 @@ main img {
 }
 aside h2{
     position: absolute;
-    top: 47px;
-    left: 150px;
+    top: 30px;
+    left: 102px;
+    color: white;
+    position:absolute;
 }
 header, .grid, footer {
     max-width: 840px;
@@ -98,7 +102,7 @@ nav {
 
 nav a {
     display: block;
-    padding: 0.5 rem;
+    padding: 0.5rem;
     text-decoration: none;
     font-size: 1.2rem;
     font-weight: 700;
