--- a/wdd130/wwr/styles/rafting.css
+++ b/wdd130/wwr/styles/rafting.css
@@ -1,6 +1,6 @@
-@import url("https://fonts.google.com/specimen/Bitter?query=Bitter");
+
 body{
-    font-family: var(-paragraph-font);
+
     max-width: 1000px;
     padding:20px;
     margin: 0 auto;
@@ -20,10 +20,11 @@ h1, h2, h3, h4, h5, h6 {
     color:var(--primary-color);
 }
 
-header{
+header {
+    display: grid;
+    grid-template-columns: auto;
 
-    padding: 20px;
-    background-color:var(--accent1-color);
+
 }
 
  div {
@@ -34,7 +35,6 @@ header{
 
 div h1 {
     position: absolute;
-    font-display: var(--accent2-color);
     align-items: center;
     color: whitesmoke;
     text-align: center;
@@ -59,5 +59,172 @@ div article{
 a {
     text-decoration: none;
     color: black;
+
+}
+
+
+header {
+	margin: 1rem auto;
+	display: grid;
+	grid-template-columns: 2fr 1fr;
+	align-items: center;
+	border-bottom: 1px solid #ccc;
+	max-width: 1000px;
+    background-color: skyblue;
+    padding: 20px;
+    
+}
+
+header img {
+	margin: 0 0.25rem 0 1rem;
+	width: 80px;
+	height: auto;
+}
+
+header nav {
+	display: flex;
+	color: navy;
+	text-decoration: none;
+
+
+    
+}
+
+header nav a {
+	display: flex;
+	color: navy;
+	text-decoration: none;
+    border: 1px solid black;
+    background-color: white;
+    padding: 5px;
+
+    
+}
+
+
+header nav a:hover {
+	color: tomato;
+	font-weight: 700;
+	text-decoration: underline;
+}
+
+h1 {
+	font-size: 2rem;
+	font-family: Acme, Arial, sans-serif;
+}
+
+
+
+footer {
+    display: grid;
+    grid-template-columns: 5fr 1fr;
+	align-items: center;
+	border-bottom: 1px solid #ccc;
+	max-width: 1000px;
+    background-color: skyblue;
+    padding: 20px; 
+}
+footer p{
+    text-align: center;
+}
+
+footer nav {
+    display: flex;
+	text-decoration: none;
+    border: 1px solid black;
+    background-color: white;
+    justify-content: space-between;
+    gap: 1px;
+ 
+}
+footer nav a {
+    display: flex;
+	color: navy;
+	text-decoration: none;
+    border: 1px solid black;
+    background-color: white;
+    padding: 5px; 
+
+
+}
+
+footer nav a img{
+    display: flex;
+	color: navy;
+	text-decoration: none;
+    border: 1px solid black;
+    background-color: white;
+    padding: 5px; 
+    gap: 5px;
+      
+
+}
+
+.History{
+   display: grid;
+   grid-template-columns: 1fr 1fr 1fr;
+   grid-template-rows: auto;
+  margin-inline-start: auto;
+
+}
+.History h2{
+    grid-column-start: 1;
+    grid-column-end: 4;
+    justify-content: center;
+    justify-self: center;
+    justify-items: center;
+
+}
+
+.History img{
+    justify-content: center;
+    justify-self: center;
+    width: 75%;
+    height: auto;
+
+}
+
+
+ .Adventures{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto;
+   
+}
+
+.Adventures h2{
+    grid-column-start: 1;
+    grid-column-end: 6;
+    justify-content: center;
+    justify-self: center;
+    justify-items: center;
+    gap: 5px;
+
+}
+
+.Adventures figure img { 
+
+    width: 120%;
+    height: auto; 
+   justify-content: center;
+   align-items:flex-start;   
+  
+}
+.hero h1{
+    justify-content: center;
+    justify-self: center;
+    justify-items: center;
+    text-align: center;
+}
+
+.hero article {
+    max-width: 800px;
+    
+}
+.hero article{
+    background-color:rgb(197, 103, 165);
+    padding: 30px;
+    max-width: fit-content;
+    color: white;
 
 }
