--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -56,7 +56,8 @@ div h1 {
     align-items: center;
     color: whitesmoke;
     text-align: center;
-
+    font-family: var(--heading-font);
+    color:var(--primary-color);
     
 }
 div article {
@@ -389,6 +390,8 @@ th, td {
     background: rgba(0, 0, 0, 0.5);
     padding: 10px 20px;
     border-radius: 5px;
+    font-family: var(--heading-font);
+    color:var(--primary-color);
 }
 
 .hero1 article {
@@ -412,6 +415,8 @@ th, td {
     background: rgba(0, 0, 0, 0.5);
     padding: 10px 20px;
     border-radius: 5px;
+    font-family: var(--heading-font);
+    color:var(--primary-color);
 }
 
 .hero2 article {
@@ -533,6 +538,8 @@ th, td {
 .Adventures h2 {
     color: var(--primary-color);
     margin-bottom: 20px;
+    font-family: var(--heading-font);
+    color:var(--primary-color);
 }
 
 /* Grid layout for figures */
